# srftippspiel

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: euro2016.yaml  euro2020.yaml  euro2024.yaml  wc2018.yaml  wc2022.yaml  womenseuro2025.yaml
docs/: matchday-retrospective.md
scripts/: migrate_results_to_corpus_refs.py  retro_tips.py
tests/: test_ad_tuning.py  test_attack_defence.py  test_backtest.py  test_bonus_questions.py  test_bracket.py  test_corpus_results.py  test_corpus_update.py  test_diagnostics.py  test_elo.py  test_eloratings_diff.py  test_espn_common.py  test_espn_odds_fetch.py  test_espn_results_fetch.py  test_fixture_resolve.py  test_historical_validation.py  test_integration.py  test_known_participants.py  test_market_odds.py  test_odds_consensus.py  test_offdef_elo.py  test_polymarket_odds_fetch.py  test_predictor.py  test_predictor_selection.py  test_rank_optimizing.py  test_realism.py  test_scalar_elo.py  test_scoreline.py  test_simulation.py  test_site.py  test_standings.py  test_strategy.py  test_thirds.py  test_tournaments.py  test_tuning.py
tippspiel/: cli.py  config.py  pipeline.py
tippspiel/data/: base.py  corpus_results.py  corpus_update.py  eloratings_adapter.py  eloratings_diff.py  espn_common.py  espn_odds_fetch.py  espn_results_fetch.py  file_provider.py  fixture_resolve.py  fixtures.csv  historical_results_adapter.py  historical_stats.py  odds_adapter.py  odds_consensus.py  polymarket_odds_fetch.py  r32_bracket_map.json
tippspiel/elo/: __init__.py  attack_defence.py  config.py  (+5 more)
(+73 files in other folders)
